# pico-freertos-storage

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h
lib/pico-usb-flash-drive/: CMakeLists.txt  flash.c
src/: hooks.c  main.c  pico_fs_utils.c
